# embedded-c-utils

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: ring_buffer.h
src/: ring_buffer.c
tests/: test_ring_buffer.c
